[tool.poetry]
name = "mindmaking-billing"
version = "0.1.0"
description = "A streamlit billing application based on vcons"
authors = ["Benjamin Gifford"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
streamlit = "^1.39.0"
pymongo = "^4.10.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
